# turtlebot3_machine_learning

turtlebot3_dqn/: CMakeLists.txt
turtlebot3_dqn/launch/: client.launch  rl_local.launch  rl_local_train_on_stage_5.launch  test.launch  test_trained_model_on_stage_5.launch
turtlebot3_dqn/nodes/: client.py  client_local_train.py  rl_local.py  rl_local_train.py  test.py  test_trained_model.py
turtlebot3_dqn/src/turtlebot3_dqn/: environment_stage_2.py  environment_stage_3.py  environment_stage_5.py  environment_stage_test.py  environment_test.py  environment_train.py  respawnGoal.py
turtlebot3_dqn/utils/: agent.py  models.py
